[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/Pinball/box_top.png" type="Texture" id=1]
[ext_resource path="res://art/Pinball/box.png" type="Texture" id=2]
[ext_resource path="res://scripts/Pinball/Box.gd" type="Script" id=3]
[ext_resource path="res://art/item sprites/mango_big.png" type="Texture" id=4]
[ext_resource path="res://PixelFont.tres" type="DynamicFont" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 11.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 2.5 )

[sub_resource type="Animation" id=3]
resource_name = "blink"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 0, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 0, 1, 0 ]
}

[node name="Box" type="StaticBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2

[node name="Sprite2" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 1 )
hframes = 2

[node name="item" type="Sprite" parent="Sprite2"]
position = Vector2( -7, -1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
centered = false
region_rect = Rect2( 3, 3, 10, 9 )

[node name="Node2D" type="Node2D" parent="Sprite2"]
scale = Vector2( 0.25, 0.25 )

[node name="RichTextLabel2" type="RichTextLabel" parent="Sprite2/Node2D"]
margin_left = -36.0496
margin_top = -5.93465
margin_right = 51.9504
margin_bottom = 38.0654
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 5 )
text = "10"
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.5, 0.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -8.5, 0.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 2.69029 )
z_index = 1
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
